# gitpractice

./: .gitmodules  first.cpp  first.txt  firstExe  second.txt
cmake/: CMakeLists.txt
cmake/w01-cpp/: CMakeLists.txt  greg.cpp  greg.h  main.cpp
libs/: a_library.txt
